Fixes scrollbar showing on side.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,10 @@
 
 @import "spotify";
 
+html {
+  overflow-y: auto;
+}
+
 .h-100 {
   height: 100%;
 }
